# fastapi-prometheus-grafana

./: .gitignore  .tool-versions  README.md  devbox.json  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  main.py
grafana/: config.monitoring
grafana/provisioning/dashboards/: fastapi-dashboard.json
grafana/provisioning/datasources/: datasource.yml
