[tool.poetry]
name = "fastapi-prometheus-grafana"
version = "0.1.0"
description = "FastAPI + Prometheus + Grafana! 🎉"
authors = [
    "Marcelo Trylesinski <marcelotryle@gmail.com>",
    "pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"
]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
argcomplete = "^3.4.0"
eliot = "^1.15.0"
fastapi = "^0.113.0"
ipython = "^8.26.0"
prometheus-fastapi-instrumentator = "^7.0.0"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
